Added custom extension

--- a/_extensions/rldm25_vmac/header.tex
+++ b/_extensions/rldm25_vmac/header.tex
@@ -1,1 +1,5 @@
-% TODO: Add custom LaTeX header directives here
+% Custom LaTeX header for RLDM template
+\usepackage{rldm25}
+\usepackage{palatino}
+\usepackage{graphicx}
+\usepackage{amsmath}
