--- a/template.qmd
+++ b/template.qmd
@@ -1,16 +1,90 @@
 ---
-title: Untitled
+title: "Formatting Instructions for RLDM"
+author:
+  - name: "Dorsal S. Raphe"
+    affiliations:
+      - id: "Department of Computer Science"
+        address: "Cranberry-Lemon University, Pittsburgh, PA 15213"
+    email: "raphe@cs.cranberry-lemon.edu"
+  - name: "Coauthor"
+    affiliations:
+      - id: "Affiliation"
+        address: "Address"
+    email: "email@example.com"
+abstract: |
+  The *title* should be a maximum of 100 characters.
+
+  The *abstract* should be a maximum of 2000 characters of text,
+  including spaces (no figure is allowed). You will be asked to copy
+  this into a text-only box; and it will appear as such in the
+  conference booklet. Use 11-point type, with a vertical spacing of
+  12 points. The word **Abstract** must be centered, bold, and in
+  point size 12. Two line spaces precede the abstract.
+keywords: [RLDM, example, formatting]
+acknowledgements: |
+  We are deeply indebted to Google DeepMind and
+  the Weinberg Institute for Cognitive Science for
+  their generous support of RLDM2017.
 format:
-  rldm25_vmac-pdf: default
-author: Francisco Garre Frutos
-date: last-modified
+  Rldm25_vmac-pdf:
+    keep-tex: true
 ---
+\newpage
+# Submission of papers to RLDM
 
-## Introduction
+RLDM requires electronic submissions. This year's electronic submission site is:
 
-*TODO* Create an example file that demonstrates the formatting and features of your format.
+\begin{center}
+   https://cmt3.research.microsoft.com/RLDM2017/
+\end{center}
 
-## More Information
+Please read the instructions below, and follow them faithfully. Note
+that there is also a template `rldm.rtf` for Microsoft Word,
+which is available from the website below.
 
-You can learn more about controlling the appearance of PDF output here: <https://quarto.org/docs/output-formats/pdf-basics.html>
+## Style
+
+Papers to be submitted to RLDM must be prepared according to the
+instructions presented here. Papers consist of a *title*, which
+has a maximum of 100 characters, an *abstract*, which is a
+maximum of 2000 characters, up to five key words, and an
+*extended abstract*, which starts on the second page, and can be
+between one and four pages. Figures and references should be included
+in the latter.
+
+Authors preferring \LaTeX{} are requested to use the RLDM \LaTeX{}
+style files obtainable at the RLDM website at:
+
+\begin{center}
+   http://www.rldm.org/
+\end{center}
+
+The file `rldm.pdf` contains these instructions and illustrates
+the various formatting requirements your RLDM paper must
+satisfy. There is a \LaTeX{} style file called `rldmsubmit.sty`,
+and a \LaTeX{} file `rldm.tex`, which may be used as a "shell"
+for writing your paper. All you have to do is replace the author,
+title, abstract, keywords, acknowledgements and text of the paper with
+your own. The file
+`rldm.rtf` is provided as an equivalent shell for Microsoft Word users.
+
+# General formatting instructions
+
+The paper size for RLDM is "US Letter" (rather than "A4"). Margins
+are 1.5cm around all sides. Use 11-point type with a vertical spacing
+of 12 points. Palatino is the preferred typeface throughout.
+Paragraphs are separated by 1/2 line space, with no indentation.
+
+Paper title is 17-point, initial caps/lower case, bold, centered between
+2 horizontal rules. Top rule is 4 points thick and bottom rule is 1 point
+thick. Allow 0.6cm space above and below title to rules.
+
+The lead author's name is to be listed first (left-most), and
+the co-authors' names (if different address) are set to follow. If
+there is only one co-author, list both author and co-author side by side.
+
+# Preparing PostScript or PDF files
+
+Please prepare PostScript or PDF files with paper size "US Letter".
+The -t letter option on dvips will produce US Letter files.
 
