--- a/_extensions/rldm25_vmac/template.tex
+++ b/_extensions/rldm25_vmac/template.tex
@@ -5,35 +5,122 @@
 \usepackage{amsmath}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}  % Fuente moderna con soporte completo
+\usepackage{hyperref}
+\usepackage{array}
+\usepackage{tabu}
 \renewcommand{\bfdefault}{b} % Asegura que las negritas se activen
+\usepackage{caption}
+\captionsetup[table]{textfont={it}, labelfont={bf}, singlelinecheck=false, labelsep=newline}
 
+$if(csl-refs)$
+% definitions for citeproc citations
+\NewDocumentCommand\citeproctext{}{}
+\NewDocumentCommand\citeproc{mm}{%
+  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
+\makeatletter
+ % allow citations to break across lines
+ \let\@cite@ofmt\@firstofone
+ % avoid brackets around text for \cite:
+ \def\@biblabel#1{}
+ \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
+\makeatother
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newlength{\csllabelwidth}
+\setlength{\csllabelwidth}{3em}
+\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
+ {\begin{list}{}{%
+  \setlength{\itemindent}{0pt}
+  \setlength{\leftmargin}{0pt}
+  \setlength{\parsep}{0pt}
+  % turn on hanging indent if param 1 is 1
+  \ifodd #1
+   \setlength{\leftmargin}{\cslhangindent}
+   \setlength{\itemindent}{-1\cslhangindent}
+  \fi
+  % set entry spacing
+  \setlength{\itemsep}{#2\baselineskip}}}
+ {\end{list}}
+\usepackage{calc}
+\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
+\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
+$endif$
+
+$if(tables)$
+\usepackage{longtable,booktabs,array}
+$if(multirow)$
+\usepackage{multirow}
+$endif$
+\usepackage{calc} % for calculating minipage widths
+$if(beamer)$
+\usepackage{caption}
+% Make caption package work with longtable
+\makeatletter
+\def\fnum@table{\tablename~\thetable}
+\makeatother
+$else$
+% Correct order of tables after \paragraph or \subparagraph
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
+\makeatother
+% Allow footnotes in longtable head/foot
+\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
+\makesavenoteenv{longtable}
+$endif$
+$endif$
+
+$if(graphics)$
+\usepackage{graphicx}
+\makeatletter
+\newsavebox\pandoc@box
+\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
+  \sbox\pandoc@box{#1}%
+  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
+  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
+  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
+  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
+  \else\usebox{\pandoc@box}%
+  \fi%
+}
+% Set default figure placement to htbp
+\def\fps@figure{htbp}
+\makeatother
+$endif$
 
 \title{$title$}
 
 \author{
 $for(by-author)$
-  $by-author.name.literal$ % Nombre del autor
+  $by-author.name.literal$$if(it.acknowledgements)$\thanks{$it.acknowledgements$}$endif$$if(it.orcid)$\footnote[1]\\$endif$$if(it.url)$\footnote[2]\\$endif$\\
   $if(by-author.affiliations)$
-    \\ $for(by-author.affiliations)$
-      $it.id$ % Afiliación
-      \\ $if(it.address)$
-        $it.address$ % Dirección
+    $for(by-author.affiliations)$
+      $it.name$ \\ % Nombre de la afiliación
+      $if(it.address)$
+        $it.address$ \\ % Dirección de la afiliación
       $endif$
     $endfor$
   $endif$
   $if(by-author.email)$
-    \\ \texttt{$by-author.email$} % Email
+    \texttt{$by-author.email$} \\ % Email
   $endif$
-  $if(by-author.last)$
-    \AND
+  $if(by-author.note)$
+    \AND % Salto de columna si "note" está presente
+  $elseif(by-author.attributes.corresponding)$
+  % No añadir nada si es el último autor
   $else$
-    \And
+    \And % Salto estándar
   $endif$
 $endfor$
 }
 
 
+
 \begin{document}
+
+\AtBeginEnvironment{table}{\setlength\belowcaptionskip{0pt}}
 
 \maketitle
 
@@ -41,8 +128,44 @@ $endfor$
 $abstract$
 \end{abstract}
 
-\keywords{$for(keywords)$$keywords$$sep$, $endfor$}
+\keywords{$for(keywords)$$keywords$ $endfor$}
+
+\acknowledgements{$acknowledgements$}  
+
+\startmain % to start the main 1-4 pages of the submission.
 
 $body$
+
+$if(natbib)$
+$if(bibliography)$
+$if(biblio-title)$
+$if(has-chapters)$
+\renewcommand\bibname{$biblio-title$}
+$else$
+\renewcommand\refname{$biblio-title$}
+$endif$
+$endif$
+$if(beamer)$
+\begin{frame}[allowframebreaks]{$biblio-title$}
+  \bibliographytrue
+$endif$
+  \bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
+$if(beamer)$
+\end{frame}
+$endif$
+
+$endif$
+$endif$
+$if(biblatex)$
+$if(beamer)$
+\begin{frame}[allowframebreaks]{$biblio-title$}
+  \bibliographytrue
+  \printbibliography[heading=none]
+\end{frame}
+$else$
+\printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
+$endif$
+
+$endif$
 
 \end{document}
